# openlp_doc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  scripts.py
openlp_doc/: __main__.py  constants.py  documenter.py  exceptions.py
openlp_doc/templates/: service.html  serviceitem.html  slides.html
projects/openlp_ctrl/: README.md  pyproject.toml  use-case.md
projects/openlp_ctrl/openlp_ctrl/: __init__.py  __main__.py  connection_manager.py
projects/openlp_ctrl/tests/: test_ctrl.py
projects/openlp_doc/: README.md
projects/openlp_doc/openlp_doc/templates/: service.html  serviceitem.html
tests/: test_documenter.py  tmp
tests/resources/: Service 2024-01-20 23-43.osz  service_data.osj
