[tool.poetry]
name = "openlp-song-sheet"
version = "0.1.0"
description = "Transform OpenLP song and service data into web content"
authors = ["Tim Stephenson <tim@knowprocess.com>"]
license = "GNU General Public License v3 or later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
