[tool.poetry]
name = "openlp-doc"
version = "0.1.0"
description = "Transform OpenLP song and service data into web content"
authors = ["Tim Stephenson <tim@knowprocess.com>"]
license = "GNU General Public License v3 or later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.3"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"

[tool.poetry.scripts]
openlp_doc = "openlp_doc.__main__:main"
tests = "scripts:tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
