[tool.poetry]
name = "openlp-ctrl"
version = "0.1.0"
description = "Control interface for OpenLP"
authors = ["Tim Stephenson <tim@knowprocess.com>"]
license = "GNU General Public License v3 or later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"
pre-commit = "^4.3.0"
httpx = "^0.25.0"

[tool.poetry.scripts]
openlp_ctrl = "openlp_ctrl.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
